[MODEUS-211] Upgrade module to Vert.x 5.0 (#209)
* Upgrade to latest RMB and Vert.x versions

* Adjust VertxUtil for Vert.x 5

* Create utility method for dealing with callback style APIs

* Adjust classes for Vert.x 5

* Remove rxjava2 from tests, fix, and adjust for Vert.x 5

* Adjust remaining tests for Vert.x 5

* Update multipart/form-data workaround

* Fix file upload handler

* Upgrade spotless-maven-plugin and google-java-format to latest versions

* Remove executeBlocking helper from VertxUtil